Wed Sep  4 11:13:40 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_gsub): use BEG(0) for whole matched position not
	  return value from rb_reg_search(), for \K matching.
	  [ruby-dev:47694] [Bug #8856]

Wed Sep  4 11:11:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (SOLIBS): LIBRUBY_SO also needs linking with gmp, to
	  run worker processes in test-all on non-ELF platforms.

Tue Sep  3 23:01:41 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parser/test_tree.rb
	  (TestTreeParser::TestInvalid#test_unmatched_close_tag):
	  Compute expected value from test value.

Tue Sep  3 22:59:58 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/treeparser.rb (REXML::Parsers::TreeParser#parse):
	  Add source information to parse exception on no close tag error.
	  [Bug #8844]  [ruby-dev:47672]
	  Patch by Ippei Obayashi. Thanks!!!
	* test/rexml/parser/test_tree.rb: Add a test for the above case.

Tue Sep  3 22:57:57 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parser/test_tree.rb: Fix test name to describe test
	  content.

Tue Sep  3 22:54:46 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/treeparser.rb (REXML::Parsers::TreeParser#parse):
	  Remove needless nested parse exception information.
	  [Bug #8844]  [ruby-dev:47672]
	  Reported by Ippei Obayashi. Thanks!!!
	* test/rexml/parser/test_tree.rb: Add a test for the above case.

Tue Sep  3 22:03:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_enc_str_new_cstr): new function to create a string from
	  the C-string pointer with the specified encoding.

Tue Sep  3 21:41:37 2013  Akira Matsuda  <ronnie@dio.jp>

	* eval.c (Init_eval): Make Module#include and Module#prepend public
	  [Feature #8846]

	* test/ruby/test_module.rb (class TestModule): Test for above

Tue Sep  3 21:35:19 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (sys/dyntune.h): for gettune().

	* thread_pthread.c (hpux_attr_getstackaddr): fix missing *.